--- a/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_3.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_3.xhtml
@@ -34,7 +34,7 @@
 
                         <p:panel class="w-100">
                             <f:facet name="header" >
-                                <h:outputText styleClass="fas fa-store" />
+                                <h:outputText styleClass="fas fa-mortar-pestle" />
                                 <h:outputLabel value="Pharmacy Retail Bill(Sale 4)" class="mx-4"></h:outputLabel>
                             </f:facet>
 
