--- a/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_2.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_2.xhtml
@@ -35,14 +35,15 @@
 
                         <p:panel class="w-100">
                             <f:facet name="header" >
-                                <h:outputText styleClass="fas fa-store" />
+                                <h:outputText styleClass="fas fa-mortar-pestle" />
                                 <h:outputLabel value="Pharmacy Retail Bill(Sale 3)" class="mx-4"></h:outputLabel>
                             </f:facet>
                             <div class="row">
                                 <div class="col-6">
                                     <p:panel header="Add Items" class="my-1">
+
                                         <f:facet name="header" >
-                                            <h:outputText styleClass="fas fa-store" />
+                                            <h:outputText styleClass="fas fa-cube" />
                                             <h:outputLabel value="Add Items" class="mx-4"></h:outputLabel>
                                         </f:facet>
 
@@ -136,7 +137,11 @@
                                         </h:panelGrid>
                                     </p:panel>
 
-                                    <p:panel header="Bill Items" id="pBis" class="mb-1">
+                                    <p:panel id="pBis">
+                                        <f:facet name="header" >
+                                            <h:outputText styleClass="fas fa-money-bill" />
+                                            <h:outputLabel value="Bill Items" class="mx-4"></h:outputLabel>
+                                        </f:facet>
                                         <p:dataTable id="tblBillItem" value="#{pharmacySaleController2.preBill.billItems}"
                                                      var="bi" rowIndexVar="s" editable="true" sortBy="#{bi.searialNo}" >
 
@@ -191,7 +196,11 @@
                                     </p:panel>
 
 
-                                    <p:panel header="Availability" id="tabI" >
+                                    <p:panel id="tabI" class="my-1 ">
+                                        <f:facet name="header" >
+                                            <h:outputText styleClass="fas fa-check-circle" />
+                                            <h:outputLabel value="Availability" class="mx-4"></h:outputLabel>
+                                        </f:facet>
 
                                         <p:panelGrid columns="2" style="width: 100%;vertical-align: top;" styleClass="alignTop">
 
@@ -293,7 +302,11 @@
                                     <h:panelGrid id="sale" columns="1" class="alignTop" >
                                         <div class="row">
                                             <div class="col">
-                                                <p:panel header="Payment Details" class="w-100">
+                                                <p:panel class="w-100">
+                                                    <f:facet name="header" >
+                                                        <h:outputText styleClass="fas fa-money-bill-wave" />
+                                                        <h:outputLabel value="Payment Details" class="mx-4"></h:outputLabel>
+                                                    </f:facet>
                                                     <div class="row" >
                                                         <div class="d-flex col">
                                                             <p:selectOneMenu  class="mx-1" id="pay" value="#{pharmacySaleController2.paymentMethod}">    
@@ -376,7 +389,11 @@
                                                     </h:panelGrid>
                                                 </p:panel>
 
-                                                <p:panel header="Bill Details" id="pBillDetails" class="my-1" >
+                                                <p:panel  id="pBillDetails" class="my-1">
+                                                    <f:facet name="header" >
+                                                        <h:outputText styleClass="fas fa-list" />
+                                                        <h:outputLabel value="Bill Details" class="mx-4"></h:outputLabel>
+                                                    </f:facet>
                                                     <h:panelGrid columns="2" columnClasses="numberCol, textCol"  >
                                                         <h:outputLabel value="Total" ></h:outputLabel>
                                                         <h:outputLabel class="mx-4 my-1" id="total" value="#{pharmacySaleController2.preBill.total}" >
@@ -406,9 +423,12 @@
 
                                                 </p:panel>
 
-                                                <p:panel header="Client Detail"> 
-
-
+                                                <p:panel  class="my-1"> 
+                                                    <f:facet name="header" >
+                                                        <h:outputText styleClass="fas fa-user-tie" />
+                                                        <h:outputLabel value="Client Details" class="mx-4"></h:outputLabel>
+                                                    </f:facet> 
+                                                    
                                                     <p:tabView id="tvPt" style="min-height: 250px;"  activeIndex="#{pharmacySaleController2.patientSearchTab}" >
                                                         <p:ajax event="tabChange"  process="@this"
                                                                 update=":#{p:resolveFirstComponentWithId('cmbPs',view).clientId} :#{p:resolveFirstComponentWithId('pBillDetails',view).clientId}"
@@ -526,7 +546,7 @@
 
                                                             </h:panelGrid>
 
-                                                           
+
 
                                                         </p:tab>
                                                     </p:tabView>
@@ -536,7 +556,7 @@
                                     </h:panelGrid>
                                 </div>
                             </div>
-                    </p:panel>
+                        </p:panel>
                     </p:panel>
                 </h:form>
 
