--- a/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_3.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_3.xhtml
@@ -42,8 +42,9 @@
                             <div class="row">
                                 <div class="col-6">
                                     <p:panel header="Add Items" class="my-1">
+
                                         <f:facet name="header" >
-                                            <h:outputText styleClass="fas fa-store" />
+                                            <h:outputText styleClass="fas fa-cube" />
                                             <h:outputLabel value="Add Items" class="mx-4"></h:outputLabel>
                                         </f:facet>
 
@@ -133,7 +134,11 @@
 
                                     </p:panel>
 
-                                    <p:panel header="Bill Items" id="pBis" class="mb-1">
+                                    <p:panel id="pBis">
+                                        <f:facet name="header" >
+                                            <h:outputText styleClass="fas fa-money-bill" />
+                                            <h:outputLabel value="Bill Items" class="mx-4"></h:outputLabel>
+                                        </f:facet>
                                         <p:dataTable id="tblBillItem" value="#{pharmacySaleController3.preBill.billItems}"
                                                      var="bi" rowIndexVar="s" editable="true" sortBy="#{bi.searialNo}" >
 
@@ -188,7 +193,11 @@
                                     </p:panel>
 
 
-                                    <p:panel header="Availability" id="tabI" >
+                                    <p:panel id="tabI" class="my-1 ">
+                                        <f:facet name="header" >
+                                            <h:outputText styleClass="fas fa-check-circle" />
+                                            <h:outputLabel value="Availability" class="mx-4"></h:outputLabel>
+                                        </f:facet>
 
                                         <p:panelGrid columns="2" style="width: 100%;vertical-align: top;" styleClass="alignTop">
 
@@ -287,7 +296,11 @@
                                     <h:panelGrid id="sale" columns="1" class="alignTop" >
                                         <div class="row">
                                             <div class="col">
-                                                <p:panel header="Payment Details" class="w-100">
+                                                <p:panel class="w-100">
+                                                    <f:facet name="header" >
+                                                        <h:outputText styleClass="fas fa-money-bill-wave" />
+                                                        <h:outputLabel value="Payment Details" class="mx-4"></h:outputLabel>
+                                                    </f:facet>
                                                     <div class="row" >
                                                         <div class="d-flex col">
                                                             <p:selectOneMenu  class="mx-1" id="pay" value="#{pharmacySaleController3.paymentMethod}">    
@@ -369,7 +382,11 @@
                                                     </h:panelGrid>
                                                 </p:panel>
 
-                                                <p:panel header="Bill Details" id="pBillDetails"  >
+                                                <p:panel  id="pBillDetails" class="my-1">
+                                                    <f:facet name="header" >
+                                                        <h:outputText styleClass="fas fa-list" />
+                                                        <h:outputLabel value="Bill Details" class="mx-4"></h:outputLabel>
+                                                    </f:facet>
                                                     <h:panelGrid columns="2" columnClasses="numberCol, textCol"  >
                                                         <h:outputLabel value="Total" ></h:outputLabel>
                                                         <h:outputLabel class="mx-4 my-1" id="total" value="#{pharmacySaleController3.preBill.total}" >
@@ -394,7 +411,12 @@
                                                         </h:outputLabel>
                                                     </h:panelGrid>
                                                 </p:panel>
-                                                <p:panel header="Client Detail"> 
+                                                
+                                               <p:panel  class="my-1"> 
+                                                    <f:facet name="header" >
+                                                        <h:outputText styleClass="fas fa-user-tie" />
+                                                        <h:outputLabel value="Client Details" class="mx-4"></h:outputLabel>
+                                                    </f:facet>
 
 
                                                     <p:tabView id="tvPt" style="min-height: 250px;"  activeIndex="#{pharmacySaleController3.patientSearchTab}" >
