--- a/src/main/webapp/resources/ezcomp/common/patient_details.xhtml
+++ b/src/main/webapp/resources/ezcomp/common/patient_details.xhtml
@@ -239,50 +239,52 @@
                 </h:panelGroup>
             </f:facet>
 
-            <h:panelGrid columns="2" >
+            <h:panelGrid columns="3" >
 
-
-
-
-
-
-
-                <h:outputLabel value="Name : " />
+                <h:outputLabel value="Name " class="mx-3"/>
+                <h:outputLabel value=" : " class="mx-3"/>
                 <h:outputText value="#{cc.attrs.patient.person.nameWithTitle}" />
 
-                <h:outputLabel value="Gender : " />
+                <h:outputLabel value="Gender " class="mx-3"/>
+                <h:outputLabel value=" : " class="mx-3"/>
                 <h:outputText value="#{cc.attrs.patient.person.sex}" />
 
-                <h:outputLabel value="Date of Birth : " />
+                <h:outputLabel value="Date of Birth " class="mx-3"/>
+                <h:outputLabel value=" : " class="mx-3"/>
                 <h:outputText value="#{cc.attrs.patient.person.dob}" >
                     <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateFormat}" ></f:convertDateTime>
                 </h:outputText>
 
-                <h:outputLabel value="Age :  " />
+                <h:outputLabel value="Age  " class="mx-3"/>
+                <h:outputLabel value=" : " class="mx-3"/>
                 <h:outputText value="#{cc.attrs.patient.person.ageAsString}" />
 
-                <h:outputLabel value="Mobile Number: " />
+                <h:outputLabel value="Mobile Number " class="mx-3"/>
+                <h:outputLabel value=" : " class="mx-3"/>
                 <h:outputText value="#{cc.attrs.patient.person.mobile}" />
 
-                <h:outputLabel value="Phone Number: " />
+                <h:outputLabel value="Phone Number: " class="mx-3"/>
+                <h:outputLabel value=" : " class="mx-3"/>
                 <h:outputText value="#{cc.attrs.patient.person.phone}" />
 
-                <h:outputLabel value="Email: " />
+                <h:outputLabel value="Email " class="mx-3"/>
+                <h:outputLabel value=" : " class="mx-3"/>
                 <h:outputText value="#{cc.attrs.patient.person.email}" />
 
-                <h:outputLabel value="National ID No.: " />
+                <h:outputLabel value="National ID No. " class="mx-3"/>
+                <h:outputLabel value=" : " class="mx-3"/>
                 <h:outputText value="#{cc.attrs.patient.person.nic}" />
 
-                <h:outputLabel value="Address: " />
+                <h:outputLabel value="Address " class="mx-3"/>
+                <h:outputLabel value=" : " class="mx-3"/>
                 <h:outputText value="#{cc.attrs.patient.person.address}" />
-                <h:outputLabel value="Area: " />
+                
+                <h:outputLabel value="Area " class="mx-3"/>
+                <h:outputLabel value=" : " class="mx-3"/>
                 <h:outputText value="#{cc.attrs.patient.person.area.name}" />
-
-
 
             </h:panelGrid>
         </p:panel>
-
 
 
     </cc:implementation>
