Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/resources/inward/bht.xhtml
+++ b/src/main/webapp/resources/inward/bht.xhtml
@@ -137,7 +137,7 @@
                         </div>
 
                         <div class="my-4" style="font-weight: bold;margin-left: 10%;">
-                            <p:outputLabel   value="PATIENT DETAIL" />
+                            <p:outputLabel   value="PATIENT DETAILS" />
                         </div>
 
                         <div class="row ">
@@ -219,7 +219,7 @@
                         </div>
 
                         <div class="my-4" style="font-weight: bold;margin-left: 10%;">
-                            <p:outputLabel   value="GUARDIAN DETAIL" />
+                            <p:outputLabel   value="GUARDIAN DETAILS" />
                         </div>
 
                         <div class="row">
@@ -276,7 +276,7 @@
                         </div>
 
                         <div class="my-4" style="font-weight: bold;margin-left: 10%;">
-                            <p:outputLabel   value="CREDIT COMPANY DETAIL" />
+                            <p:outputLabel   value="CREDIT COMPANY DETAILS" />
                         </div>
 
                         <div class="row">
