Closes Issue#1993 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/admin/pricing/index.xhtml
+++ b/src/main/webapp/admin/pricing/index.xhtml
@@ -19,7 +19,7 @@
                                                              ajax="false" 
                                                              value="Item Fees"
                                                              actionListener="#{viewController.makeAdminFeesAsPreviousPage()}"
-                                                             action="/admin/pricing/manage_item_fees"/>
+                                                             action="#{itemFeeManager.navigateToItemFees()}"/>
                                             <p:commandButton class="w-100"
                                                              ajax="false"
                                                              value="Item Fees List"
