--- a/src/main/webapp/inward/admission_profile.xhtml
+++ b/src/main/webapp/inward/admission_profile.xhtml
@@ -12,6 +12,8 @@
 
     <ui:define name="content">
         <h:form id="form">
+            <p:growl id="inpatientDashboardGrowl" ></p:growl>
+            
             <p:panel >
                 <f:facet name="header" >
                     <h:outputText styleClass="fa fa-id-card"></h:outputText>
@@ -159,13 +161,14 @@
                                     />
                                 </p:commandButton>
                                 <p:commandButton 
-                                    value="Add Services" 
+                                    ajax="false"
+                                    value="Add Services for Surgeries" 
                                     icon="fa fa-briefcase"
                                     action="#{billBhtController.navigateToAddServiceFromAdmissionProfile}"
                                     class="w-100">
                                     <f:setPropertyActionListener
                                         value="#{admissionController.current}"
-                                        target="#{billBhtController.batchBill.patientEncounter}"
+                                        target="#{billBhtController.patientEncounter}"
                                     />
                                 </p:commandButton>
                             </div>
