--- a/src/main/webapp/inward/report_out_side_inward_bill.xhtml
+++ b/src/main/webapp/inward/report_out_side_inward_bill.xhtml
@@ -11,7 +11,7 @@
         <h:form>
             <p:panel>
                 <f:facet name="header">
-                    <p:outputLabel value="Out Side Service Bill reoprt" />
+                    <p:outputLabel value="Outside Service Bill reoprt" />
                 </f:facet>
 
                 <p:panelGrid columns="6" class="my-2">
