Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/inward/inward_admission.xhtml
+++ b/src/main/webapp/inward/inward_admission.xhtml
@@ -43,7 +43,7 @@
                         </p:commandButton>
 
                     </div>
-                    <p:panel header="Admission Details" class="w-100" >
+                    <p:panel header="Admission Details" class="w-100 mb-1" >
                         <f:facet name="header">
                             <h:outputText styleClass="fa fa-hospital"></h:outputText>
                             <h:outputLabel value="Admission Details" class="mx-3"></h:outputLabel>
@@ -129,7 +129,7 @@
                         </div>
 
                         <div class="col-6">
-                            <p:panel class="my-1">
+                            <p:panel >
                                 <f:facet name="header">
                                     <h:outputText styleClass="fa fa-medkit"></h:outputText>
                                     <h:outputLabel value="Hospital Use" class="mx-3"></h:outputLabel>
