--- a/src/main/webapp/reportCashier/day_end_summery.xhtml
+++ b/src/main/webapp/reportCashier/day_end_summery.xhtml
@@ -27,12 +27,19 @@
                         <h:outputLabel value="To Date"/>
                         <p:calendar id="toDate" value="#{channelReportController.toDate}" navigator="true" pattern="#{sessionController.applicationPreference.longDateTimeFormat}"  >
                         </p:calendar>
-                        <h:outputLabel styleClass="noPrintButton" value="User Name"/>
+                        <h:outputLabel styleClass="noPrintButton" value="User Name or User Code"/>
                         <p:autoComplete  completeMethod="#{webUserController.completeUser}" styleClass="noPrintButton"
                                         forceSelection="true"
                                         var="w" itemLabel="#{w.webUserPerson.name}" itemValue="#{w}"
-                                        value="#{channelReportController.webUser}" ></p:autoComplete>
-
+                                        value="#{channelReportController.webUser}" >
+                            <p:column>
+                                    #{w.webUserPerson.name}
+                                </p:column>
+                                <p:column>
+                                    #{w.webUserPerson.code}
+                                </p:column>
+                        </p:autoComplete>
+                         
                     </h:panelGrid>
                     <h:panelGrid columns="5">
                         <p:spacer width="70" height="1"/>
