--- a/src/main/webapp/resources/ezcomp/inward_appointment_print.xhtml
+++ b/src/main/webapp/resources/ezcomp/inward_appointment_print.xhtml
@@ -70,32 +70,32 @@
                             </div>
                         </div>
 
-                        <div class="row m-2 text-center">
-                            <div class="my-4" style="font-weight: bold;">
-                                <p:outputLabel   value="PATIENT DETAIL" />
+                        <div class="row m-2 ">
+                            <div class="my-4 text-center" style="font-weight: bold;">
+                                <p:outputLabel   value="PATIENT DETAILS" />
                             </div>
 
                             <div class="row d-flex justify-content-center align-items-center">
-                                <div class="col-6 text-center d-flex justify-content-end align-items-center">
-                                    <table>
+                                <div class="col-6 d-flex text-left align-items-center justify-content-center">
+                                   <table>
                                         <tbody>
                                             <tr>
                                                 <th class="text-left">Name</th>
-                                                <td class="text-right">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                                                <td class="text-right">&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;&nbsp;&nbsp;</td>
                                                 <td class="text-left">
                                                     #{cc.attrs.controller.currentAppointment.patient.person.nameWithTitle}
                                                 </td>
                                             </tr>
                                             <tr>
                                                 <th class="text-left">Address</th>
-                                                <td class="text-right">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                                                <td class="text-right">&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;&nbsp;&nbsp;</td>
                                                 <td class="text-left">
                                                     #{cc.attrs.controller.currentAppointment.patient.person.address}
                                                 </td>
                                             </tr>
                                             <tr>
                                                 <th class="text-left">Age</th>
-                                                <td class="text-center">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                                                <td class="text-center">&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;&nbsp;&nbsp;</td>
                                                 <td class="text-left">
                                                     #{cc.attrs.controller.currentAppointment.patient.age}
                                                 </td>
@@ -105,34 +105,33 @@
 
                                 </div>
 
-                                <div class="col-6  d-flex justify-content-end align-items-center">
-
+                                <div class="col-6  d-flex justify-content-end align-items-center justify-content-center">
                                     <table>
                                         <tbody>
                                             <tr>
                                                 <th class="text-left">Sex</th>
-                                                <td class="text-center">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                                                <td class="text-center">&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;&nbsp;&nbsp;</td>
                                                 <td class="text-left">
                                                     #{cc.attrs.controller.currentAppointment.patient.person.sex}
                                                 </td>
                                             </tr>
                                             <tr>
                                                 <th class="text-left">NIC</th>
-                                                <td class="text-center">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                                                <td class="text-center">&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;&nbsp;&nbsp;</td>
                                                 <td class="text-left">
                                                     #{cc.attrs.controller.currentAppointment.patient.person.nic}
                                                 </td>
                                             </tr>
                                             <tr>
                                                 <th class="text-left">Address</th>
-                                                <td class="text-center">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                                                <td class="text-center">&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;&nbsp;&nbsp;</td>
                                                 <td class="text-left">
                                                     #{cc.attrs.controller.currentAppointment.patient.person.address}
                                                 </td>
                                             </tr>
                                             <tr>
                                                 <th class="text-left">Mobile No</th>
-                                                <td class="text-center">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                                                <td class="text-center">&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;&nbsp;&nbsp;</td>
                                                 <td class="text-left">
                                                     #{cc.attrs.controller.currentAppointment.patient.person.mobile}
                                                 </td>
@@ -144,24 +143,23 @@
 
                                 </div>
                             </div>
-                            <div class="my-4" style="font-weight: bold;">
+                            <div class="my-4 text-center" style="font-weight: bold;">
                                 <p:outputLabel   value="REFERING DOCTOR DETAIL" />
                             </div>
 
                             <div class="d-flex justify-content-center align-items-center">
-
                                 <table>
                                     <tbody>
                                         <tr>
                                             <th class="text-left">Doctor Name</th>
-                                            <td class="text-center">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                                            <td class="text-center">&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;&nbsp;&nbsp;</td>
                                             <td class="text-left">
                                                 #{cc.attrs.controller.currentBill.referredBy.person.name}
                                             </td>
                                         </tr>
                                         <tr>
                                             <th class="text-left">Appointment Date</th>
-                                            <td class="text-center">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                                            <td class="text-center">&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;&nbsp;&nbsp;</td>
                                             <td class="text-left">
                                                 #{cc.attrs.controller.currentAppointment.appointmentDate}
                                             </td>
@@ -172,23 +170,23 @@
 
                             </div>
 
-                            <div class="my-4" style="font-weight: bold;">
+                            <div class="my-4 text-center" style="font-weight: bold;">
                                 <p:outputLabel   value="BILL DETAILS" />
                             </div>
 
-                            <div class="text-center d-flex justify-content-center align-items-center">
+                            <div class="text-left d-flex justify-content-center align-items-center">
                                 <table>
                                     <tbody>
                                         <tr>
                                             <th class="text-left">Total</th>
-                                            <td class="text-center">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                                            <td class="text-center">&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;&nbsp;&nbsp;</td>
                                             <td class="text-left">
                                                 #{cc.attrs.controller.currentBill.total}
                                             </td>
                                         </tr>
                                         <tr>
                                             <th class="text-left">Payment Method</th>
-                                            <td class="text-center">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                                            <td class="text-center">&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;&nbsp;&nbsp;</td>
                                             <td class="text-left">
                                                 #{cc.attrs.controller.currentBill.paymentMethod}
                                             </td>
