Signed-off-by: DamithDeshan <hkddrajapaksha@gmail.com>

--- a/src/main/webapp/credit/inward_due_age_credit_company_detail.xhtml
+++ b/src/main/webapp/credit/inward_due_age_credit_company_detail.xhtml
@@ -9,7 +9,7 @@
 
     <h:body>
         <ui:composition template="/inward/inward_reports.xhtml">
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>            
                     <p:commandButton class="mx-1" id="btnSearch" ajax="false" value="Process Due Age" action="#{creditCompanyDueController.createInwardAgeTable()}"  />
                     <p:commandButton class="mx-1" id="btnProcess" ajax="false" 
