Close #1999 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/reportCashier/day_end_summery.xhtml
+++ b/src/main/webapp/reportCashier/day_end_summery.xhtml
@@ -40,7 +40,7 @@
                                 #{w.webUserPerson.name}
                             </p:column>
                             <p:column headerText="Code">
-                                #{w.webUserPerson.code}
+                                #{w.code}
                             </p:column>
                         </p:autoComplete>
 
