Signed-off-by: Buddhika <buddhika@cacore-app-server-2.asia-southeast1-c.c.my-project-1537433467858.internal>

--- a/src/main/webapp/inward/inward_bill_final.xhtml
+++ b/src/main/webapp/inward/inward_bill_final.xhtml
@@ -82,7 +82,8 @@
                                         pattern="#{sessionController.applicationPreference.longDateTimeFormat}"  >                               
                             </p:calendar>     
                             <h:outputLabel value="Printing Discharge Time"/>
-                            <p:calendar value="#{bhtSummeryController.patientEncounter.printingDischargeTime}"
+                            <p:calendar 
+                                value="#{bhtSummeryController.patientEncounter.printingDischargeTime}"
                                         id="printingDischargeTimeStamp"
                                         pattern="#{sessionController.applicationPreference.longDateTimeFormat}"  >                               
                             </p:calendar>    
