Closes #1993 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/admin/pricing/manage_item_fees.xhtml
+++ b/src/main/webapp/admin/pricing/manage_item_fees.xhtml
@@ -68,6 +68,11 @@
                                 </p:commandButton>
                             </div>
                             <div class="col-md-2">
+                                <p:commandButton value="Clear" ajax="false"
+                                                 actionListener="#{itemFeeManager.clearItemFees()}" class="w-100 mt-2 ui-button-danger" icon="fa-solid fa-ban">   
+                                </p:commandButton>
+                            </div>
+                            <div class="col-md-2">
 
                                 <p:commandButton value="Back" ajax="false"
                                                  action="#{itemFeeManager.navigateToItemFees()}" icon="fa fa-arrow-right" class="w-100 ui-button-warning mt-2">   
